style(html): Update of the mockups for the new card layout

--- a/counter/index.html
+++ b/counter/index.html
@@ -110,7 +110,7 @@
         <div class="content-wrapper">
             <section class="content-section image-left">
                 <div class="content-image">
-                    <img src="assets/mockup.webp" alt="TuneCharts time reports" loading="lazy" />
+                    <img src="assets/mockup-static.webp" alt="TuneCharts time reports" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>From Scrobbles to Hours</h2>
@@ -120,7 +120,7 @@
             </section>
             <section class="content-section image-right">
                 <div class="content-image">
-                    <img src="assets/format.webp" alt="Comparison of Story and Square time formats" loading="lazy" />
+                    <img src="assets/mockup-static1.webp" alt="Comparison of Story and Square time formats" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>Share Your Time Stats</h2>
@@ -133,7 +133,7 @@
             </section>
             <section class="content-section image-left">
                 <div class="content-image">
-                    <img src="assets/phone.webp" alt="TuneCharts Counter results on mobile" loading="lazy" />
+                    <img src="assets/mockup-static2.webp" alt="TuneCharts Counter results on mobile" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>Instant Time Analysis</h2>
