--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="content-wrapper">
             <section class="content-section image-left">
                 <div class="content-image">
-                    <img src="https://tunecharts.space/assets/mockup.webp" alt="A fan-shaped display of TuneCharts reports in different colors" loading="lazy" />
+                    <img src="assets/mockup-static.webp" alt="A fan-shaped display of TuneCharts reports in different colors" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>Your Music, Beautifully Visualized</h2>
@@ -153,7 +153,7 @@
             </section>
             <section class="content-section image-right">
                 <div class="content-image">
-                    <img src="https://tunecharts.space/assets/format.webp" alt="Comparison of the 9:16 Story format and the 1:1 Square format" loading="lazy" />
+                    <img src="assets/mockup-static1.webp" alt="Comparison of the 9:16 Story format and the 1:1 Square format" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>Shareable Reports for Every Platform</h2>
@@ -166,7 +166,7 @@
             </section>
             <section class="content-section image-left">
                 <div class="content-image">
-                    <img src="https://tunecharts.space/assets/phone.webp" alt="A mockup of the TuneCharts results page on a mobile phone" loading="lazy" />
+                    <img src="assets/mockup-static2.webp" alt="A mockup of the TuneCharts results page on a mobile phone" loading="lazy" />
                 </div>
                 <div class="content-text">
                     <h2>Ready in Seconds, Optimized for You</h2>
