Matcher restructuring test (test 5)

--- a/matcher/result.html
+++ b/matcher/result.html
@@ -133,9 +133,9 @@
                         <img id="storyUserImg2" src="" class="story-avatar-duo" />
                         <h1 id="storyUserName2" class="story-username-duo">...</h1>
                     </div>
+                <div class="story-header-content">
                 </div>
-                <p id="storySharedText" class="story-dynamic-text">Analyzing compatibility...</p>
-            </div>
+                </div>
 
             <div class="story-body">
                 <div class="story-column">
