--- a/matcher/result.html
+++ b/matcher/result.html
@@ -60,10 +60,12 @@
             </div>
         </div>
 
-        <div class="header-titles">
-            <h2 class="subtitulo-destaque">MATCH: <span id="compatibilityScore">--</span>%</h2>
-            <p id="commonContent" class="monthly-label">Analyzing your musical bond...</p>
-        </div>
+       <button id="btnIr" style="display: flex; align-items: center; gap: 8px;">
+                    Tune in Now
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 16v4M6 4v4m1 10H3M8 6H4m9-2 1.753 4.444c.188.477.282.715.426.916.127.178.283.334.461.461.2.144.44.238.916.426L21 12l-4.444 1.753c-.477.188-.715.282-.916.426a1.998 1.998 0 0 0-.461.461c-.144.2-.238.44-.426.916L13 20l-1.753-4.444c-.188-.477-.282-.715-.426-.916a1.998 1.998 0 0 0-.461-.461c-.2-.144-.44-.238-.916-.426L5 12l4.444-1.753c.477-.188.715-.282.916-.426.178-.127.334-.283.461-.461.144-.2.238-.44.426-.916L13 4Z"/>
+                    </svg>
+                    </button>
     </section>
 
     <main class="conteudo-charts">
@@ -278,7 +280,7 @@
                         <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                     </svg>
                 </a>
-                <span class="dot">•</span><a href="changelog.html" class="versao">v2.0.0</a>
+                <span class="dot">•</span><a href="changelog.html" class="versao">v3.0.0</a>
             </div>
         </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
