--- a/matcher/result.html
+++ b/matcher/result.html
@@ -60,13 +60,10 @@
             </div>
         </div>
 
-       <button id="btnIr" style="display: flex; align-items: center; gap: 8px;">
-                    Tune in Now
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 16v4M6 4v4m1 10H3M8 6H4m9-2 1.753 4.444c.188.477.282.715.426.916.127.178.283.334.461.461.2.144.44.238.916.426L21 12l-4.444 1.753c-.477.188-.715.282-.916.426a1.998 1.998 0 0 0-.461.461c-.144.2-.238.44-.426.916L13 20l-1.753-4.444c-.188-.477-.282-.715-.426-.916a1.998 1.998 0 0 0-.461-.461c-.2-.144-.44-.238-.916-.426L5 12l4.444-1.753c.477-.188.715-.282.916-.426.178-.127.334-.283.461-.461.144-.2.238-.44.426-.916L13 4Z"/>
-                    </svg>
-                    </button>
-    </section>
+        <div class="header-titles">
+            <h2 class="subtitulo-destaque">MATCH: <span id="compatibilityScore">--</span>%</h2>
+            <p id="commonContent" class="monthly-label">Analyzing your musical bond...</p>
+        </div>
 
     <main class="conteudo-charts">
         <div class="charts-grid">
@@ -288,4 +285,4 @@
     <script src="feedback.js"></script>
     <script src="version.js"></script>
 </body>
-</html>
+</html>""
