test(charts/counter): New fixed period logic

--- a/counter/index.html
+++ b/counter/index.html
@@ -150,7 +150,7 @@
                     <h2>Instant Time Analysis</h2>
                     <p>Get instant access to your <strong>time metrics</strong> without complex spreadsheets. Our key benefits include:</p>
                     <ul>
-                        <li><strong>Time by Period:</strong> Toggle instantly to see how many hours you listened this Week, Month, or Year.</li>
+                        <li><strong>Time by Period:</strong> Toggle instantly to see how many hours you listened this Week or Month.</li>
                         <li><strong>Customizable:</strong> Choose your accent color for a fully personalized time report.</li>
                         <li><strong>Secure:</strong> We use cached calculations to provide fast results without spamming the API.</li>
                     </ul>
