--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <h2>Ready in Seconds, Optimized for You</h2>
                     <p>Get instant access to your <strong>scrobble history</strong> whenever you want. Our key benefits include:</p>
                     <ul>
-                        <li><strong>Dynamic Periods:</strong> Toggle instantly between Weekly, Monthly, and Annual listening reports.</li>
+                        <li><strong>Dynamic Periods:</strong> Toggle instantly between Weekly and Monthly listening reports.</li>
                         <li><strong>Customizable:</strong> Choose your accent color for a fully personalized report card.</li>
                         <li><strong>Secure:</strong> Your API key is protected by our secure Cloudflare backend, not exposed in the browser.</li>
                     </ul>
