--- a/counter/result.html
+++ b/counter/result.html
@@ -43,7 +43,6 @@
                 <div class="toggle-glider"></div>
                 <button class="toggle-option" data-period="7day">Week</button>
                 <button class="toggle-option active" data-period="1month">Month</button>
-                <button class="toggle-option" data-period="12month">Annual</button>
             </div>
         </header>
         <section class="topo-com-banner">
@@ -157,7 +156,7 @@
                     </div>
                 </div>
                 <div class="sq-v2-footer">
-                    <div class="sq-v2-brand">Create yours at counter.tunecharts.space</div>
+                    <div class="sq-v2-brand">Create yours at tunecharts.space</div>
                     <div class="sq-v2-stat">
                         <span id="sqScrobblesLabel" class="sq-v2-stat-label"></span>
                         <span id="sqScrobblesValue" class="sq-v2-stat-value">0</span>
@@ -200,7 +199,7 @@
                     </div>
                     <div class="toggle-switch-row">
                         <label class="toggle-label" for="col-tracks">
-                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2Zm0 0V5l12-2v14m0 0c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2ZM9 9l12-2"/></svg>
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2ZM9 9l12-2"/></svg>
                             <span style="margin-left:8px;">Top Tracks</span>
                         </label>
                         <label class="toggle-switch">
