feat(matcher): change in the counting logic for a match. The logic was changed to use a 'Tiers' system (S, A, B, C) and focus on the quality of matches, ignoring small ranking differences.

--- a/live/index.html
+++ b/live/index.html
@@ -48,7 +48,7 @@
         (window.dataLayer = window.dataLayer || []), gtag("js", new Date()), gtag("config", "G-ESP4KVJCPE");
     </script>
 
-    <title>Live Music Visualizer & Now Playing Display - TuneCharts Live</title>
+    <title>Last.fm Scrobbling Now Display- TuneCharts Live</title>
     <meta content="Turn your screen into a dynamic music frame. TuneCharts Live visualizes your Last.fm 'Now Playing' with artist backgrounds and album art in real-time." name="description" />
     <meta content="now playing display, last.fm visualizer, spotify always on, music dashboard, live scrobble, tunecharts live" name="keywords" />
     <meta content="Snow Mint" name="author" />
@@ -84,7 +84,7 @@
 
     <main class="hero-section">
         <div class="card-inicial">
-            <h1>Always On Music Display</h1>
+            <h1>Last.fm Scrobbling Now Display</h1>
             <p>Transform your monitor into a dynamic "Now Playing" frame. Perfect for second screens or idle mode.</p>
             
             <div class="input-group">
