feat(root): remoção do caminho style.css

--- a/counter/index.html
+++ b/counter/index.html
@@ -30,7 +30,7 @@
         </style>
         <meta name="description" content="Free tool to calculate your total listening time on Last.fm. Convert scrobbles into hours and minutes. Generate beautiful charts for Instagram Stories." />
         <meta name="keywords" content="last.fm time calculator, listening hours, music duration, scrobble time, lastfm stats, instagram music stories" />
-        <meta name="author" content="SnwMint" />
+        <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/counter" />
