--- a/matcher/index.html
+++ b/matcher/index.html
@@ -30,7 +30,7 @@
         <title>Last.fm Compatibility Test & Music Matcher - AuvlyFM</title>
         <meta name="description" content="Compare music taste with friends using the Last.fm Compatibility Test. The AuvlyFM Matcher acts as a modern Tasteometer to calculate your score and top shared artists."/>
         <meta name="keywords" content="last.fm compatibility, last.fm match, music taste comparison, tasteometer, compare last.fm users, music compatibility test, lastfm vs, tunecharts" />
-        <meta name="author" content="SnwMint" />
+        <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/matcher/" />
