--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <title>Last.fm Stats & Music Charts Visualizer - AuvlyFM</title>
         <meta name="description" content="Free tool to generate beautiful, shareable music reports from your Last.fm scrobbles. View top artists, tracks, and albums in charts ready for Instagram Stories." />
         <meta name="keywords" content="last.fm stats, music charts, scrobble visualizer, lastfm report, instagram music stories, top artists generator" />
-        <meta name="author" content="DreyWe" />
+        <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/" />
@@ -43,7 +43,6 @@
         <meta property="twitter:title" content="AuvlyFM - Visualize Your Last.fm Music Stats" />
         <meta property="twitter:description" content="Generate beautiful charts from your listening history. Ready for Instagram Stories." />
         <meta property="twitter:image" content="https://snw-mint.github.io/auvly-fm/assets/images/og-image.jpg" />
-        <link rel="stylesheet" href="style.css" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
