feat(general): fix favicon path

--- a/counter/index.html
+++ b/counter/index.html
@@ -7,6 +7,10 @@
         <link rel="canonical" href="https://snw-mint.github.io/auvly-fm/counter" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/home.css" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
         <title>Last.fm Time Calculator & Stats - AuvlyFM Counter</title>
         <style>
             .hero-section { min-height: 60vh; }
@@ -42,10 +46,6 @@
         <meta property="twitter:title" content="AuvlyFM Counter - Calculate Your Listening Time" />
         <meta property="twitter:description" content="Find out exactly how many hours you've spent listening to your favorite artists." />
         <meta property="twitter:image" content="https://snw-mint.github.io/auvly-fm/counter/assets/images/og-image.jpg" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
