--- a/matcher/index.html
+++ b/matcher/index.html
@@ -7,6 +7,10 @@
         <link rel="canonical" href="https://matcher.https://snw-mint.github.io/auvly-fm" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/home.css" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
         <style>
             .hero-section { min-height: 60vh; }
             .card-inicial h1 {
@@ -62,10 +66,6 @@
                 }
             }
         </script>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
     </head>
     <body id="page-top">
         <header class="home-header">
