feat(charts/counter): fix Spotify image search

--- a/counter/result.html
+++ b/counter/result.html
@@ -16,10 +16,10 @@
         <meta property="og:title" content="My Listening Time on AuvlyFM" />
         <meta property="og:description" content="I calculated my total listening time on Last.fm. Check yours now!" />
         <meta property="og:image" content="https://snw-mint.github.io/auvly-fm/counter/assets/og-image.jpg" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
     </head>
     <body class="pagina-resultado">
         <header class="topo-fixo">
