--- a/result.html
+++ b/result.html
@@ -17,10 +17,10 @@
         <meta property="og:description" content="See my top artists and tracks from Last.fm!" />
         <meta property="og:image" content="https://https://snw-mint.github.io/auvly-fm/assets/og-image.jpg" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
     </head>
     <body class="pagina-resultado">
         <header class="topo-fixo">
