feat(general): transfer to the organization

--- a/counter/index.html
+++ b/counter/index.html
@@ -4,7 +4,7 @@
         <script src="../js/config.js"></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="canonical" href="https://snw-mint.github.io/auvly-fm/counter" />
+        <link rel="canonical" href="https://auvlyfm.github.io/counter" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/home.css" />
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
@@ -37,21 +37,21 @@
         <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/counter" />
+        <meta property="og:url" content="https://auvlyfm.github.io/counter" />
         <meta property="og:title" content="AuvlyFM Counter - Calculate Your Listening Time" />
         <meta property="og:description" content="Find out exactly how many hours you've spent listening to your favorite artists." />
-        <meta property="og:image" content="https://snw-mint.github.io/auvly-fm/counter/assets/images/og-image.jpg" />
+        <meta property="og:image" content="https://auvlyfm.github.io/counter/assets/images/og-image.jpg" />
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://snw-mint.github.io/auvly-fm/counter" />
+        <meta property="twitter:url" content="https://auvlyfm.github.io/counter" />
         <meta property="twitter:title" content="AuvlyFM Counter - Calculate Your Listening Time" />
         <meta property="twitter:description" content="Find out exactly how many hours you've spent listening to your favorite artists." />
-        <meta property="twitter:image" content="https://snw-mint.github.io/auvly-fm/counter/assets/images/og-image.jpg" />
+        <meta property="twitter:image" content="https://auvlyfm.github.io/counter/assets/images/og-image.jpg" />
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
                 "@type": "WebApplication",
                 "name": "AuvlyFM Counter",
-                "url": "https://snw-mint.github.io/auvly-fm/counter",
+                "url": "https://auvlyfm.github.io/counter",
                 "applicationCategory": "MultimediaApplication",
                 "genre": "Music",
                 "operatingSystem": "Web browser",
@@ -77,10 +77,10 @@
                 <span class="logo-text">AuvlyFM <span style="color: #bb86fc; font-weight: 700; text-transform: uppercase; font-size: 0.6em; margin-left: 5px">Counter</span></span>
             </a>
         <nav class="nav-desktop">
-                <a href="https://snw-mint.github.io/auvly-fm/" class="nav-link">Charts</a>
-                <a href="https://snw-mint.github.io/auvly-fm/counter/" class="nav-link active">Counter</a> 
-                <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="nav-link">Matcher</a>
-                <a href="https://snw-mint.github.io/auvly-fm/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
+                <a href="https://auvlyfm.github.io/" class="nav-link">Charts</a>
+                <a href="https://auvlyfm.github.io/counter/" class="nav-link active">Counter</a> 
+                <a href="https://auvlyfm.github.io/matcher/" class="nav-link">Matcher</a>
+                <a href="https://auvlyfm.github.io/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
             </nav>
         
             <button class="mobile-menu-btn" aria-label="Open Menu">
@@ -90,9 +90,9 @@
             </button>
         
             <div class="mobile-nav-overlay">
-                <a href="https://snw-mint.github.io/auvly-fm/" class="mobile-link">Charts</a>
-                <a href="https://snw-mint.github.io/auvly-fm/counter/" class="mobile-link active">Counter</a>
-                <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="mobile-link">Matcher</a>
+                <a href="https://auvlyfm.github.io/" class="mobile-link">Charts</a>
+                <a href="https://auvlyfm.github.io/counter/" class="mobile-link active">Counter</a>
+                <a href="https://auvlyfm.github.io/matcher/" class="mobile-link">Matcher</a>
         </div>
         </header>
         <main class="hero-section">
