--- a/counter/result.html
+++ b/counter/result.html
@@ -12,10 +12,10 @@
         <meta name="description" content="Calculate your total music listening time on Last.fm! See hours listened for artists and tracks." />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/counter/" />
+        <meta property="og:url" content="https://auvlyfm.github.io/counter/" />
         <meta property="og:title" content="My Listening Time on AuvlyFM" />
         <meta property="og:description" content="I calculated my total listening time on Last.fm. Check yours now!" />
-        <meta property="og:image" content="https://snw-mint.github.io/auvly-fm/counter/assets/og-image.jpg" />
+        <meta property="og:image" content="https://auvlyfm.github.io/counter/assets/og-image.jpg" />
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
