--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="js/config.js"></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="canonical" href="https://snw-mint.github.io/auvly-fm/" />
+        <link rel="canonical" href="https://auvlyfm.github.io/" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/home.css" />
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
@@ -38,21 +38,21 @@
         <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/" />
+        <meta property="og:url" content="https://auvlyfm.github.io/" />
         <meta property="og:title" content="AuvlyFM - Visualize Your Last.fm Music Stats" />
         <meta property="og:description" content="Generate beautiful charts from your listening history. Ready for Instagram Stories." />
-        <meta property="og:image" content="https://snw-mint.github.io/auvly-fm/assets/images/og-image.jpg" />
+        <meta property="og:image" content="https://auvlyfm.github.io//assets/images/og-image.jpg" />
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://snw-mint.github.io/auvly-fm/" />
+        <meta property="twitter:url" content="https://auvlyfm.github.io/" />
         <meta property="twitter:title" content="AuvlyFM - Visualize Your Last.fm Music Stats" />
         <meta property="twitter:description" content="Generate beautiful charts from your listening history. Ready for Instagram Stories." />
-        <meta property="twitter:image" content="https://snw-mint.github.io/auvly-fm/assets/images/og-image.jpg" />
+        <meta property="twitter:image" content="https://auvlyfm.github.io//assets/images/og-image.jpg" />
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
                 "@type": "WebApplication",
                 "name": "AuvlyFM",
-                "url": "https://snw-mint.github.io/auvly-fm/",
+                "url": "https://auvlyfm.github.io/",
                 "applicationCategory": "MultimediaApplication",
                 "genre": "Music",
                 "operatingSystem": "Web browser",
@@ -70,10 +70,10 @@
                 <span class="logo-text">AuvlyFM</span>
             </a>
             <nav class="nav-desktop">
-                    <a href="https://snw-mint.github.io/auvly-fm/" class="nav-link active">Charts</a> 
-                    <a href="https://snw-mint.github.io/auvly-fm/counter/" class="nav-link">Counter</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="nav-link">Matcher</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
+                    <a href="https://auvlyfm.github.io/" class="nav-link active">Charts</a> 
+                    <a href="https://auvlyfm.github.io/counter/" class="nav-link">Counter</a>
+                    <a href="https://auvlyfm.github.io/matcher/" class="nav-link">Matcher</a>
+                    <a href="https://auvlyfm.github.io/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
                 </nav>
             
                 <button class="mobile-menu-btn" aria-label="Open Menu">
@@ -83,9 +83,9 @@
                 </button>
             
                 <div class="mobile-nav-overlay">
-                    <a href="https://snw-mint.github.io/auvly-fm/" class="mobile-link active">Charts</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/counter" class="mobile-link">Counter</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="mobile-link">Matcher</a>
+                    <a href="https://auvlyfm.github.io/" class="mobile-link active">Charts</a>
+                    <a href="https://auvlyfm.github.io/counter" class="mobile-link">Counter</a>
+                    <a href="https://auvlyfm.github.io/matcher/" class="mobile-link">Matcher</a>
             </div>
         </header>
         <main class="hero-section">
