--- a/live/index.html
+++ b/live/index.html
@@ -4,7 +4,7 @@
     <script src="../js/config.js"></script>
     <meta charset="UTF-8" />
     <meta content="width=device-width,initial-scale=1" name="viewport" />
-    <link href="https://snw-mint.github.io/auvly-fm/live/" rel="canonical" />
+    <link href="https://auvlyfm.github.io/live/" rel="canonical" />
     <link href="css/base.css" rel="stylesheet" />
     <link href="css/home.css" rel="stylesheet" />
     <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
@@ -40,15 +40,15 @@
     <meta content="Snow Mint" name="author" />
     <meta content="#0f0f0f" name="theme-color" />
     <meta content="website" property="og:type" />
-    <meta content="https://snw-mint.github.io/auvly-fm/live/" property="og:url" />
+    <meta content="https://auvlyfm.github.io/live/" property="og:url" />
     <meta content="AuvlyFM Live - Your Music, Now Playing" property="og:title" />
     <meta content="A beautiful Always-On Display for your music. Syncs with Last.fm in real-time." property="og:description" />
-    <meta content="https://snw-mint.github.io/auvly-fm/live/assets/images/og-image.jpg" property="og:image" />
+    <meta content="https://auvlyfm.github.io/live/assets/images/og-image.jpg" property="og:image" />
     <meta content="summary_large_image" property="twitter:card" />
-    <meta content="https://snw-mint.github.io/auvly-fm/live/" property="twitter:url" />
+    <meta content="https://auvlyfm.github.io/live/" property="twitter:url" />
     <meta content="AuvlyFM Live - Real-time Music Visualizer" property="twitter:title" />
     <meta content="Turn any screen into a beautiful music display." property="twitter:description" />
-    <meta content="https://snw-mint.github.io/auvly-fm/live/assets/images/og-image.jpg" property="twitter:image" />
+    <meta content="https://auvlyfm.github.io/live/assets/images/og-image.jpg" property="twitter:image" />
 </head>
 
 <body id="page-top">
@@ -61,9 +61,9 @@
             </span>
         </a>
         <nav class="nav-desktop">
-            <a href="https://snw-mint.github.io/auvly-fm/" class="nav-link">Charts</a>
-            <a href="https://snw-mint.github.io/auvly-fm/counter/" class="nav-link">Counter</a>
-            <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="nav-link">Matcher</a>
+            <a href="https://auvlyfm.github.io/" class="nav-link">Charts</a>
+            <a href="https://auvlyfm.github.io/counter/" class="nav-link">Counter</a>
+            <a href="https://auvlyfm.github.io/matcher/" class="nav-link">Matcher</a>
             <a href="#" class="nav-link active">Live <span class="badge-new">NEW</span></a>
         </nav>
     </header>
