--- a/matcher/index.html
+++ b/matcher/index.html
@@ -37,15 +37,15 @@
         <meta name="author" content="Snow Mint" />
         <meta name="theme-color" content="#0f0f0f" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://snw-mint.github.io/auvly-fm/matcher/" />
+        <meta property="og:url" content="https://auvlyfm.github.io/matcher/" />
         <meta property="og:title" content="Last.fm Compatibility Test - AuvlyFM Matcher" />
         <meta property="og:description" content="Enter two Last.fm usernames and discover your Music Match Score instantly!" />
-        <meta property="og:image" content="https://snw-mint.github.io/auvly-fm/matcher/assets/images/og-image.jpg" />
+        <meta property="og:image" content="https://auvlyfm.github.io/matcher/assets/images/og-image.jpg" />
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://snw-mint.github.io/auvly-fm/matcher/" />
+        <meta property="twitter:url" content="https://auvlyfm.github.io/matcher/" />
         <meta property="twitter:title" content="Last.fm Compatibility Test - AuvlyFM Matcher" />
         <meta property="twitter:description" content="Enter two Last.fm usernames and discover your Music Match Score instantly!" />
-        <meta property="twitter:image" content="https://snw-mint.github.io/auvly-fm/matcher/assets/images/og-image.jpg" />
+        <meta property="twitter:image" content="https://auvlyfm.github.io/matcher/assets/images/og-image.jpg" />
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
@@ -74,10 +74,10 @@
                 <span class="logo-text">AuvlyFM <span style="color: #bb86fc; font-weight: 700; text-transform: uppercase; font-size: 0.6em; margin-left: 5px">Matcher</span></span>
             </a>
             <nav class="nav-desktop">
-                    <a href="https://snw-mint.github.io/auvly-fm/" class="nav-link">Charts</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/counter/" class="nav-link">Counter</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="nav-link active">Matcher</a> 
-                    <a href="https://snw-mint.github.io/auvly-fm/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
+                    <a href="https://auvlyfm.github.io/" class="nav-link">Charts</a>
+                    <a href="https://auvlyfm.github.io/counter/" class="nav-link">Counter</a>
+                    <a href="https://auvlyfm.github.io/matcher/" class="nav-link active">Matcher</a> 
+                    <a href="https://auvlyfm.github.io/live/" class="nav-link">Live <span class="badge-new">NEW</span></a>
                 </nav>
             
                 <button class="mobile-menu-btn" aria-label="Open Menu">
@@ -88,8 +88,8 @@
             
                 <div class="mobile-nav-overlay">
                     <a href="https://snw-mint.github.io/auvly-fm" class="mobile-link">Charts</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/counter/" class="mobile-link">Counter</a>
-                    <a href="https://snw-mint.github.io/auvly-fm/matcher/" class="mobile-link active">Matcher</a>
+                    <a href="https://auvlyfm.github.io/counter/" class="mobile-link">Counter</a>
+                    <a href="https://auvlyfm.github.io/matcher/" class="mobile-link active">Matcher</a>
             </div>
         </header>
         <main class="hero-section">
