--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
         <script src="js/config.js"></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="canonical" href="https://https://snw-mint.github.io/auvly-fm/privacy.html" />
+        <link rel="canonical" href="https://https://auvlyfm.github.io/privacy.html" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/policies.css" />
         <title>Privacy Policy - AuvlyFM</title>
