feat(general): adjustments to the final URL and branding

--- a/live/live.html
+++ b/live/live.html
@@ -111,7 +111,7 @@
                 <img alt="Logo" src="android-chrome-512x512.png" width="20" />
                 <span>AuvlyFM <span style="color: var(--accent-color)">Live</span></span>
             </div>
-            <a class="versao" href="https://github.com/snw-mint/auvly-fm/releases" target="_blank">v0.0.0</a>
+            <a class="versao" href="https://github.com/AuvlyFM/auvlyfm.github.io//releases" target="_blank">v0.0.0</a>
         </div>
     </aside>
 
