--- a/terms.html
+++ b/terms.html
@@ -56,15 +56,15 @@
                 <span class="dot">•</span>
                 <a href="terms.html">Terms of Use</a>
                 <span class="dot">•</span>
-                <a href="https://github.com/snw-mint/auvly-fm/issues" target="_blank">Feedback / Issues</a>
+                <a href="https://github.com/AuvlyFM/auvlyfm.github.io/issues" target="_blank">Feedback / Issues</a>
                 <span class="dot">•</span>
-                <a href="https://github.com/snw-mint/auvly-fm" target="_blank" aria-label="View Source on GitHub" title="View Source on GitHub" style="display: inline-flex; align-items: center">
+                <a href="https://github.com/AuvlyFM/auvlyfm.github.io/" target="_blank" aria-label="View Source on GitHub" title="View Source on GitHub" style="display: inline-flex; align-items: center">
                     <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" style="transition: stroke 0.2s">
                         <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                     </svg>
                 </a>
                 <span class="dot">•</span>
-                <a href="https://github.com/snw-mint/auvly-fm/releases" target="_blank" class="versao">v0.0.0</a>
+                <a href="https://github.com/AuvlyFM/auvlyfm.github.io//releases" target="_blank" class="versao">v0.0.0</a>
             </div>
         </footer>
             <button id="scrollTopBtn" aria-label="Top">
