refactor(general): Removal of the old .htaccess files from the old server and removal of 404 pages from the subdirectories.

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>404 - Page Not Found</title>
+        <link rel="stylesheet" href="css/base.css" />
         <style>
             * {
                 margin: 0;
@@ -14,7 +15,6 @@
                 background-color: #0f0f0f;
                 background: radial-gradient(circle at top right, #2a0040, #0f0f0f 70%);
                 color: #fff;
-                font-family: "Poppins", sans-serif;
                 height: 100vh;
                 display: flex;
                 align-items: center;
