--- a/counter/result.html
+++ b/counter/result.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <script src="../js/config.js"></script>
+        <meta name="robots" content="noindex, nofollow">
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="robots" content="noindex, follow" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/result.css" />
         <link rel="stylesheet" href="css/cards.css" />
