--- a/live/live.html
+++ b/live/live.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="../js/config.js"></script>
+    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8" />
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="#000000" name="theme-color" />
