--- a/result.html
+++ b/result.html
@@ -3,8 +3,8 @@
     <head>
         <script src="js/config.js"></script>
         <meta charset="UTF-8" />
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="robots" content="noindex, follow" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/result.css" />
         <link rel="stylesheet" href="css/cards.css" />
